refactor: 커서 기반 작업 조회에서 마지막 작업 가져오기 수정